# mangareader

./: .craftsettings.ini  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mangareader.kcfg  mangareaderui.rc  settings.kcfgc  settings.ui
.github/: FUNDING.yml
.github/workflows/: main.yml
data/: CMakeLists.txt  com.georgefb.mangareader.appdata.xml  com.georgefb.mangareader.desktop  com.georgefb.mangareader.metainfo.xml
data/icons/: 32-apps-mangareader.png.license  CMakeLists.txt
src/: CMakeLists.txt  _debug.h  extractor.cpp  extractor.h  image.h  imagegenerationthread.cpp  imagegenerationthread.h  imagerequest.h  main.cpp  mainwindow.cpp  mainwindow.h  manga.cpp  manga.h  mangatreewidget.cpp  mangatreewidget.h  page.cpp  page.h  settingswindow.cpp  settingswindow.h  startupwidget.cpp  startupwidget.h  view.cpp  view.h  worker.cpp  worker.h
src/settings/: mangareaderui.rc  resources.qrc  settings.kcfg  settings.kcfgc  viewui.rc
